Add test project

--- a/css/queries.css
+++ b/css/queries.css
@@ -1,8 +1,4 @@
-<<<<<<< HEAD
 ﻿/* ==========================================================================
-=======
-/* ==========================================================================
->>>>>>> 4e3e8b50425e75c9498257a9e137cd50771aa55f
 CSS Queries
 ========================================================================== */
 
@@ -10,9 +6,17 @@ CSS Queries
 	
 }
 @media screen and (max-width:400px) {
-	
+	#appcontainer h3{
+		font-size: 36px;
+		line-height: 30px;
+	}
+	#appcontainer h3 span{
+		font-size: 27px;
+		letter-spacing: 12.75px;
+	}
+	.applogo{
+		width: 90px;
+		height: auto;
+	}
 }
-<<<<<<< HEAD
 
-=======
->>>>>>> 4e3e8b50425e75c9498257a9e137cd50771aa55f
