--- a/css/queries.css
+++ b/css/queries.css
@@ -5,7 +5,7 @@ CSS Queries
 @media screen and (max-width:800px) {
 	
 }
-@media screen and (max-width:400px) {
+@media screen and (max-width:400px),screen and (max-height: 400px) {
 	#appcontainer h3{
 		font-size: 36px;
 		line-height: 30px;
