--- a/css/styles.css
+++ b/css/styles.css
@@ -185,36 +185,26 @@ User Styles
 .clearfix:after { clear: both; }
 .clearfix { *zoom: 1; }
 /*====== 1st Page - App Name & Logo ======*/
-#appcontainer{
-	display: table;
-	text-align: center;
-	height: 100%;
-	width: 100%;
-}
-.appcontainer{
-	display: table-cell;
-	vertical-align: middle;
-}
-#appcontainer h3{
-	font-family: Caviar Dreams Bold;
-	font-size: 48px;
-	font-weight: 800;
-	color: #b20000;
-	line-height: 40px;
-	margin-top: 0;
-}
-#appcontainer h3 span{
-	font-size: 36px;
-	color: #353535;
-	letter-spacing: 17px;
-}
-#appcontainer h3 span span{
-	letter-spacing: 0px;
-}
-
-
-
-
+#appcontainer{	display: table;text-align:center;height: 100%;width: 100%;}
+.appcontainer{	display: table-cell;vertical-align: middle;}
+#appcontainer h3{	font-family: Caviar Dreams Bold;font-size: 48px;font-weight: 800;color: #b20000;line-height: 40px;margin-top: 0;}
+#appcontainer h3 span{	font-size: 36px;color: #353535;letter-spacing: 17px;}
+#appcontainer h3 span span{	letter-spacing: 0px;}
+/*====== User Styles ======*/
+body > .header { position: relative;max-height: 100px;z-index: 1030;}
+body > .header .navbar { margin: 0;width: 100%;float: none;position: relative!important;height: 50px;text-align: center;background-color: #b20000;}
+body > .header .navbar a,body > .header .navbar i { color: #fff;}
+body > .header .navbar .navbar-main{ min-height: 50px;}
+body > .header .navbar .navbar-main .sidebar-toggle { position: absolute;right: 0;padding: 9px 5px;margin-top: 6.5px;margin-right: 5px;margin-bottom: 6.5px;margin-left: 0;background-color: transparent;background-image: none;border: 1px solid transparent;-webkit-border-radius: 0 !important;-moz-border-radius: 0 !important;border-radius: 0 !important;}
+body > .header .navbar .navbar-main .sidebar-toggle .icon-bar { display: block;width: 24px;height: 3px;-webkit-border-radius: 4px;-moz-border-radius: 4px;border-radius: 4px;}
+.navbar .navbar-main .sidebar-toggle .icon-bar { background: rgba(255, 255, 255, 0.8);}
+body > .header .navbar .navbar-main .sidebar-toggle .icon-bar + .icon-bar { margin-top: 4px;}
+body > .header .logo { font-size: 24px;text-align: center;font-family: Caviar Dreams Bold;color: #fff;line-height: 10px;position: relative;top: 8px;}
+body > .header .logo:hover,body > .header .logo:focus{ text-decoration: none;}
+body > .header .logo span{ font-size: 18px;letter-spacing: 8.75px;}
+body > .header .logo span.no_spacing{ letter-spacing: 0px;}
+body > .header .navbar .navbar-container { display: none;width: 100%;height: inherit;text-align: center;background-color: #b20000;}
+body > .header .navbar .navbar-bottom-border{ width: 100%;height: 5px;background-color: #fff;box-shadow: 0 2px 6px #444;}
 
 
 
