--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -1451,6 +1451,7 @@ pre code {
 .col-xs-6 {
   width: 50%;
 }
+.col-xs-6.square{ width: 45%;padding-bottom: 45%;margin: 2.5%;}
 .col-xs-5 {
   width: 41.66666667%;
 }
@@ -1772,6 +1773,7 @@ pre code {
   .col-md-4 {
     width: 33.33333333%;
   }
+  .col-md-4.square{ width: 30%;padding-bottom: 30%;margin: 1.66%;}
   .col-md-3 {
     width: 25%;
   }
