--- a/css/queries.css
+++ b/css/queries.css
@@ -3,9 +3,9 @@ CSS Queries
 ========================================================================== */
 
 @media screen and (max-width:800px) {
-	
+
 }
-@media screen and (max-width:400px),screen and (max-height: 400px) {
+@media screen and (max-width:500px),screen and (max-height: 400px) {
 	#appcontainer h3{
 		font-size: 36px;
 		line-height: 30px;
@@ -18,5 +18,6 @@ CSS Queries
 		width: 90px;
 		height: auto;
 	}
+	.btn-call .table-cell img { width: 15%;}
 }
 
